Filtering to sort in ascending or descending on date and price

--- a/assignmentseven/index.html
+++ b/assignmentseven/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="filter_buttons">
+    <div class="filter_buttons">
+        <button id="date-asc">Sort by Date (Ascending)</button>
+        <button id="date-desc">Sort by Date (Descending)</button>
+        <button id="price-asc">Sort by Price (Ascending)</button>
+        <button id="price-desc">Sort by Price (Descending)</button>
+        <button id="view-favorites">View Favorites</button>
+        
+    </div>
+</div>
+
     <div class="container">
 
     </div>
